Prepare for rspec and beaker.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,8 +40,9 @@ Style/RedundantReturn:
 Lint/AmbiguousOperator:
   Enabled: true
 
+# DISABLED - Assignment in condition - you probably meant to use ==
 Lint/AssignmentInCondition:
-  Enabled: true
+  Enabled: false
 
 Style/SpaceBeforeComment:
   Enabled: true
@@ -168,6 +169,9 @@ Style/ClassAndModuleChildren:
 Style/ClassCheck:
   Enabled: false
 
+Metrics/BlockLength:
+  Enabled: false
+
 Metrics/ClassLength:
   Enabled: false
 
@@ -211,7 +215,7 @@ Style/SpaceInsideParens:
 Style/LeadingCommentSpace:
   Enabled: false
 
-Style/SingleSpaceBeforeFirstArg:
+Style/SpaceBeforeFirstArg:
   Enabled: false
 
 Style/SpaceAfterColon:
@@ -220,7 +224,7 @@ Style/SpaceAfterColon:
 Style/SpaceAfterComma:
   Enabled: false
 
-Style/SpaceAfterControlKeyword:
+Style/SpaceAroundKeyword:
   Enabled: false
 
 Style/SpaceAfterMethodName:
@@ -268,9 +272,6 @@ Style/Documentation:
 Style/DefWithParentheses:
   Enabled: false
 
-Style/DeprecatedHashMethods:
-  Enabled: false
-
 Style/DotPosition:
   Enabled: false
 
@@ -308,9 +309,6 @@ Style/EmptyLiteral:
 Metrics/LineLength:
   Enabled: false
 
-Style/MethodCallParentheses:
-  Enabled: false
-
 Style/MethodDefParentheses:
   Enabled: false
 
@@ -323,7 +321,10 @@ Style/TrailingWhitespace:
 Style/StringLiterals:
   Enabled: false
 
-Style/TrailingComma:
+Style/TrailingCommaInLiteral:
+  Enabled: false
+
+Style/TrailingCommaInArguments:
   Enabled: false
 
 Style/GlobalVars:
@@ -464,9 +465,6 @@ Metrics/ParameterLists:
 Lint/RequireParentheses:
   Enabled: false
 
-Lint/SpaceBeforeFirstArg:
-  Enabled: false
-
 Style/ModuleFunction:
   Enabled: false
 
@@ -477,4 +475,7 @@ Style/IfWithSemicolon:
   Enabled: false
 
 Style/Encoding:
+  Enabled: false
+
+Style/SymbolArray:
   Enabled: false
