--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,11 @@
 fixtures:
   repositories:
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+    concat:
+      repo: "https://github.com/puppetlabs/puppetlabs-concat.git"
+      ref: "2.2.1"
+    stdlib:
+      repo: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+      ref: "4.17.0"
   symlinks:
     oxidized: "#{source_dir}"
+
