--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -169,8 +169,8 @@ Style/ClassAndModuleChildren:
 Style/ClassCheck:
   Enabled: false
 
-Metrics/BlockLength:
-  Enabled: false
+# Metrics/BlockLength:
+  # Enabled: false
 
 Metrics/ClassLength:
   Enabled: false
